...
        }}
      />
      <Tabs.Screen
        name="play"
        options={{
          title: "Video Poker",
          tabBarLabel: "Play",
          tabBarIcon: ({ color }) => <TabBarEmoji emoji="🃏" color={color} />,
          headerTitle: "9/6 Jacks or Better",
        }}
      />
      <Tabs.Screen
        name="roulette"
...
        }}
      />
      <Tabs.Screen
        name="nfts"
        options={{
          title: "My NFTs",
          tabBarLabel: "NFTs",
          tabBarIcon: ({ color }) => <TabBarEmoji emoji="💎" color={color} />,
          headerTitle: "My Vouchers",
        }}
      />
      <Tabs.Screen
        name="profile"
...
